Registro: - Terminado el NavBar - Creado el cuerpo de home - Aplicada la animación de despalazamiento en Home - Implementada la sección de la izquierda del Main MainBoard - Optimizados los estilos - Correcciones de errores

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,70 @@
 {
     "cSpell.words": [
+        "abajo",
         "activa",
         "actualice",
+        "actualiza",
+        "Actualizar",
         "adicional",
+        "Agrega",
+        "ajustar",
         "alerta",
         "algún",
         "almacenamiento",
+        "altura",
         "ancho",
         "aparece",
+        "arriba",
         "asegurar",
         "asigna",
         "aumenta",
         "autenticación",
         "autocompletado",
         "auxiliar",
+        "barra",
+        "basado",
         "botón",
+        "Btns",
+        "cambiado",
         "cambiar",
         "cambie",
         "cambios",
         "cargar",
         "cerrar",
+        "Columna",
         "componente",
+        "Comprueba",
         "confirmación",
         "confirmar",
         "contexto",
         "contrario",
+        "controlador",
+        "correspondiente",
         "crear",
+        "cuando",
         "darle",
         "debajo",
         "defecto",
         "definir",
+        "desmonta",
+        "Desplaza",
+        "desplazamiento",
         "después",
+        "diferently",
+        "dirección",
         "distancia",
         "elegir",
         "elemento",
         "elementos",
+        "Elimina",
         "entonces",
         "errores",
+        "Escucha",
         "Escuchar",
         "está",
         "estado",
+        "evento",
+        "eventos",
         "evitar",
         "fondo",
         "formulario",
@@ -49,11 +74,17 @@
         "guardada",
         "guardar",
         "habrá",
+        "hacer",
+        "hacia",
+        "hecho",
         "ignoran",
+        "importar",
         "iniciada",
         "iniciar",
+        "inicio",
         "lado",
         "lista",
+        "mantenga",
         "margen",
         "menor",
         "mensaje",
@@ -68,21 +99,28 @@
         "nodo",
         "nuevo",
         "obtener",
+        "Ocultar",
         "ocurre",
         "Opciones",
         "otro",
         "página",
+        "pantalla",
         "Parámetro",
         "Pasar",
         "pequeño",
         "personalizado",
+        "Personalizar",
+        "posición",
         "Preferiblemente",
         "previa",
+        "proprción",
         "proveedor",
         "pueda",
         "raíz",
+        "rango",
         "reanderizado",
         "recargar",
+        "redimensionamiento",
         "redireccionará",
         "representa",
         "Requerido",
@@ -97,8 +135,10 @@
         "sesión",
         "Signin",
         "signup",
+        "sobrepasa",
         "supabase",
         "tamaño",
+        "texto",
         "tiempo",
         "última",
         "Usado",
