Registro: - AJustado el responsive en toda la App. - Implementada la parte visual de la columna 2 de main board. - Implementada la parte visual sección del fondo. - Optimización del código y correcciones de errores.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "actualiza",
         "Actualizar",
         "adicional",
+        "afecte",
         "Agrega",
+        "Agregar",
         "ajustar",
         "alerta",
         "algún",
@@ -15,8 +17,11 @@
         "ancho",
         "aparece",
         "arriba",
+        "asegura",
         "asegurar",
         "asigna",
+        "asignado",
+        "asignar",
         "aumenta",
         "autenticación",
         "autocompletado",
@@ -32,6 +37,7 @@
         "cargar",
         "cerrar",
         "Columna",
+        "columnas",
         "componente",
         "Comprueba",
         "confirmación",
@@ -39,35 +45,44 @@
         "contexto",
         "contrario",
         "controlador",
+        "correo",
         "correspondiente",
         "crear",
+        "cualquiera",
         "cuando",
         "darle",
         "debajo",
         "defecto",
         "definir",
+        "dejé",
         "desmonta",
         "Desplaza",
         "desplazamiento",
         "después",
         "diferently",
         "dirección",
+        "diseño",
         "distancia",
+        "efecto",
         "elegir",
         "elemento",
         "elementos",
         "Elimina",
+        "Eliminar",
         "entonces",
         "errores",
         "Escucha",
         "Escuchar",
         "está",
         "estado",
+        "estático",
         "evento",
         "eventos",
         "evitar",
         "fondo",
         "formulario",
+        "fortnite",
+        "Fortnite",
         "Fragmentos",
         "fuente",
         "grupar",
@@ -78,15 +93,19 @@
         "hacia",
         "hecho",
         "ignoran",
+        "imagen",
         "importar",
         "iniciada",
         "iniciar",
         "inicio",
+        "interesante",
+        "izquierda",
         "lado",
         "lista",
         "mantenga",
         "margen",
         "menor",
+        "menos",
         "mensaje",
         "Mensaje",
         "método",
@@ -97,25 +116,34 @@
         "navegación",
         "necesidad",
         "nodo",
+        "nombre",
         "nuevo",
         "obtener",
+        "obtenido",
         "Ocultar",
         "ocurre",
         "Opciones",
         "otro",
         "página",
         "pantalla",
+        "pantallas",
         "Parámetro",
+        "pareció",
         "Pasar",
+        "pequeñas",
         "pequeño",
         "personalizado",
         "Personalizar",
+        "porque",
         "posición",
         "Preferiblemente",
         "previa",
+        "Primera",
+        "proporcionado",
         "proprción",
         "proveedor",
         "pueda",
+        "quita",
         "raíz",
         "rango",
         "reanderizado",
@@ -125,25 +153,33 @@
         "representa",
         "Requerido",
         "respectivamente",
+        "resultado",
         "retraso",
         "ruta",
         "rutas",
+        "salirse",
         "según",
+        "Segunda",
         "segundos",
         "será",
         "sesi'on",
         "sesión",
         "Signin",
+        "signos",
         "signup",
+        "simplificar",
         "sobrepasa",
         "supabase",
         "tamaño",
+        "Tercera",
         "texto",
         "tiempo",
+        "tiene",
         "última",
         "Usado",
         "usar",
         "usuario",
+        "validación",
         "válidas",
         "valores",
         "ventana"
