Registro: - Implemetntado el indicador de carga. - Mejoras en los estilos. - Optimización del codigo y correcciones de errores.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,14 @@
         "ajustar",
         "alerta",
         "algún",
+        "almacenado",
         "almacenamiento",
         "altura",
         "ancho",
+        "animación",
         "aparece",
+        "aplicación",
+        "arreglo",
         "arriba",
         "asegura",
         "asegurar",
@@ -24,6 +28,7 @@
         "asignar",
         "aumenta",
         "autenticación",
+        "autenticado",
         "autocompletado",
         "auxiliar",
         "barra",
@@ -34,27 +39,38 @@
         "cambiar",
         "cambie",
         "cambios",
+        "carga",
+        "cargado",
+        "cargan",
         "cargar",
+        "cargaron",
+        "categoría",
+        "categorías",
         "cerrar",
         "Columna",
         "columnas",
         "componente",
+        "componentes",
         "Comprueba",
         "confirmación",
         "confirmar",
         "contexto",
         "contrario",
         "controlador",
+        "correcto",
         "correo",
+        "corresponde",
         "correspondiente",
         "crear",
         "cualquiera",
         "cuando",
         "darle",
+        "datos",
         "debajo",
         "defecto",
         "definir",
         "dejé",
+        "desbordamiento",
         "desmonta",
         "Desplaza",
         "desplazamiento",
@@ -64,6 +80,7 @@
         "diseño",
         "distancia",
         "efecto",
+        "ejecute",
         "elegir",
         "elemento",
         "elementos",
@@ -73,6 +90,7 @@
         "errores",
         "Escucha",
         "Escuchar",
+        "Espera",
         "está",
         "estado",
         "estático",
@@ -92,23 +110,30 @@
         "hacer",
         "hacia",
         "hecho",
+        "ícono",
         "ignoran",
         "imagen",
         "importar",
+        "indicador",
         "iniciada",
         "iniciar",
         "inicio",
         "interesante",
         "izquierda",
         "lado",
+        "Limpia",
         "lista",
+        "manejar",
+        "maneje",
         "mantenga",
         "margen",
+        "medir",
         "menor",
         "menos",
         "mensaje",
         "Mensaje",
         "método",
+        "mientras",
         "mostrar",
         "mostrará",
         "muestra",
@@ -121,6 +146,7 @@
         "obtener",
         "obtenido",
         "Ocultar",
+        "ocultará",
         "ocurre",
         "Opciones",
         "otro",
@@ -129,6 +155,7 @@
         "pantallas",
         "Parámetro",
         "pareció",
+        "parpadeos",
         "Pasar",
         "pequeñas",
         "pequeño",
@@ -146,10 +173,16 @@
         "quita",
         "raíz",
         "rango",
+        "rastrear",
+        "rastreo",
         "reanderizado",
         "recargar",
+        "recuperar",
+        "recuperará",
         "redimensionamiento",
         "redireccionará",
+        "renderización",
+        "renderizará",
         "representa",
         "Requerido",
         "respectivamente",
@@ -171,6 +204,7 @@
         "sobrepasa",
         "supabase",
         "tamaño",
+        "temporizador",
         "Tercera",
         "texto",
         "tiempo",
@@ -179,6 +213,7 @@
         "Usado",
         "usar",
         "usuario",
+        "valida",
         "validación",
         "válidas",
         "valores",
