--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "abajo",
+        "aceleración",
         "activa",
         "actualice",
         "actualiza",
@@ -35,6 +36,8 @@
         "basado",
         "botón",
         "Btns",
+        "calculada",
+        "Calcular",
         "cambiado",
         "cambiar",
         "cambie",
@@ -47,6 +50,7 @@
         "categoría",
         "categorías",
         "cerrar",
+        "clic",
         "Columna",
         "columnas",
         "componente",
@@ -57,13 +61,16 @@
         "contexto",
         "contrario",
         "controlador",
+        "controladores",
         "correcto",
         "correo",
         "corresponde",
         "correspondiente",
         "crear",
+        "cuadro",
         "cualquiera",
         "cuando",
+        "cúbica",
         "darle",
         "datos",
         "debajo",
@@ -71,16 +78,26 @@
         "definir",
         "dejé",
         "desbordamiento",
+        "desde",
         "desmonta",
+        "desmonte",
         "Desplaza",
         "desplazamiento",
+        "Desplazar",
         "después",
+        "detener",
+        "Determinar",
+        "devuelve",
+        "diferente",
         "diferently",
         "dirección",
         "diseño",
         "distancia",
+        "duración",
+        "ecuación",
         "efecto",
         "ejecute",
+        "Ejemplo",
         "elegir",
         "elemento",
         "elementos",
@@ -103,10 +120,12 @@
         "Fortnite",
         "Fragmentos",
         "fuente",
+        "Función",
         "grupar",
         "guardada",
         "guardar",
         "habrá",
+        "hace",
         "hacer",
         "hacia",
         "hecho",
@@ -116,17 +135,21 @@
         "importar",
         "indicador",
         "iniciada",
+        "inicial",
         "iniciar",
         "inicio",
         "interesante",
+        "interpolación",
         "izquierda",
         "lado",
         "Limpia",
+        "Limpiar",
         "lista",
         "manejar",
         "maneje",
         "mantenga",
         "margen",
+        "medio",
         "medir",
         "menor",
         "menos",
@@ -134,15 +157,22 @@
         "Mensaje",
         "método",
         "mientras",
+        "mitad",
+        "Modificado",
         "mostrar",
         "mostrará",
+        "movimiento",
         "muestra",
         "Navega",
         "navegación",
+        "navegador",
         "necesidad",
         "nodo",
         "nombre",
+        "nueva",
+        "Nueva",
         "nuevo",
+        "objetivo",
         "obtener",
         "obtenido",
         "Ocultar",
@@ -154,25 +184,33 @@
         "pantalla",
         "pantallas",
         "Parámetro",
+        "Parámetros",
         "pareció",
         "parpadeos",
         "Pasar",
         "pequeñas",
         "pequeño",
+        "permitir",
         "personalizado",
         "Personalizar",
         "porque",
         "posición",
+        "predeterminado",
         "Preferiblemente",
+        "prevenir",
+        "Prevenir",
         "previa",
         "Primera",
+        "principio",
         "proporcionado",
         "proprción",
         "proveedor",
+        "próximo",
         "pueda",
         "quita",
         "raíz",
         "rango",
+        "rápida",
         "rastrear",
         "rastreo",
         "reanderizado",
@@ -181,6 +219,8 @@
         "recuperará",
         "redimensionamiento",
         "redireccionará",
+        "reducir",
+        "registrada",
         "renderización",
         "renderizará",
         "representa",
@@ -188,6 +228,7 @@
         "respectivamente",
         "resultado",
         "retraso",
+        "rueda",
         "ruta",
         "rutas",
         "salirse",
@@ -202,6 +243,9 @@
         "signup",
         "simplificar",
         "sobrepasa",
+        "solicitar",
+        "Solicitar",
+        "suavizar",
         "supabase",
         "tamaño",
         "temporizador",
@@ -209,14 +253,19 @@
         "texto",
         "tiempo",
         "tiene",
+        "toca",
+        "transcurrido",
         "última",
+        "último",
         "Usado",
         "usar",
         "usuario",
+        "Utiliza",
         "valida",
         "validación",
         "válidas",
         "valores",
+        "varía",
         "ventana"
     ]
 }
