--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "autenticación",
         "autenticado",
         "autocompletado",
+        "automático",
         "auxiliar",
         "barra",
         "basado",
@@ -221,6 +222,7 @@
         "redireccionará",
         "reducir",
         "registrada",
+        "Registro",
         "renderización",
         "renderizará",
         "representa",
@@ -250,6 +252,7 @@
         "tamaño",
         "temporizador",
         "Tercera",
+        "Terminada",
         "texto",
         "tiempo",
         "tiene",
