Registro: -   Implementado tema claro/oscuro -   Mejoras en el responsive -   Optimización del código y correcciones menores

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,6 +112,7 @@
         "está",
         "estado",
         "estático",
+        "Estilos",
         "evento",
         "eventos",
         "evitar",
@@ -180,6 +181,7 @@
         "ocultará",
         "ocurre",
         "Opciones",
+        "oscuro",
         "otro",
         "página",
         "pantalla",
@@ -250,6 +252,7 @@
         "suavizar",
         "supabase",
         "tamaño",
+        "tema",
         "temporizador",
         "Tercera",
         "Terminada",
