--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "categorías",
         "cerrar",
         "clic",
+        "código",
         "Columna",
         "columnas",
         "componente",
@@ -63,6 +64,7 @@
         "contrario",
         "controlador",
         "controladores",
+        "correcciones",
         "correcto",
         "correo",
         "corresponde",
@@ -134,6 +136,7 @@
         "ícono",
         "ignoran",
         "imagen",
+        "Implementado",
         "importar",
         "indicador",
         "iniciada",
@@ -153,7 +156,9 @@
         "margen",
         "medio",
         "medir",
+        "Mejoras",
         "menor",
+        "menores",
         "menos",
         "mensaje",
         "Mensaje",
@@ -181,6 +186,7 @@
         "ocultará",
         "ocurre",
         "Opciones",
+        "Optimización",
         "oscuro",
         "otro",
         "página",
