--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,11 @@
         "actualiza",
         "Actualizar",
         "adicional",
+        "admite",
+        "admitidos",
         "afecte",
         "Agrega",
+        "agregado",
         "Agregar",
         "ajustar",
         "alerta",
@@ -18,8 +21,10 @@
         "altura",
         "ancho",
         "animación",
+        "animado",
         "aparece",
         "aplicación",
+        "apropiado",
         "arreglo",
         "arriba",
         "asegura",
@@ -35,15 +40,20 @@
         "auxiliar",
         "barra",
         "basado",
+        "borra",
         "botón",
         "Btns",
+        "cada",
         "calculada",
         "Calcular",
+        "cálculo",
         "cambiado",
         "cambiar",
         "cambie",
+        "cambio",
         "cambios",
         "carga",
+        "cargada",
         "cargado",
         "cargan",
         "cargar",
@@ -51,8 +61,10 @@
         "categoría",
         "categorías",
         "cerrar",
+        "clase",
         "clic",
         "código",
+        "Colores",
         "Columna",
         "columnas",
         "componente",
@@ -80,8 +92,10 @@
         "defecto",
         "definir",
         "dejé",
+        "derecho",
         "desbordamiento",
         "desde",
+        "desees",
         "desmonta",
         "desmonte",
         "Desplaza",
@@ -94,6 +108,7 @@
         "diferente",
         "diferently",
         "dirección",
+        "directamente",
         "diseño",
         "distancia",
         "duración",
@@ -107,17 +122,24 @@
         "Elimina",
         "Eliminar",
         "entonces",
+        "entrada",
         "errores",
         "Escucha",
         "Escuchar",
+        "específico",
         "Espera",
         "está",
+        "estaba",
+        "establece",
         "estado",
         "estático",
         "Estilos",
         "evento",
         "eventos",
         "evitar",
+        "existe",
+        "Falta",
+        "filtro",
         "fondo",
         "formulario",
         "fortnite",
@@ -125,23 +147,31 @@
         "Fragmentos",
         "fuente",
         "Función",
+        "funciones",
+        "generales",
+        "generar",
         "grupar",
         "guardada",
+        "guardado",
         "guardar",
+        "habilitar",
         "habrá",
         "hace",
         "hacer",
         "hacia",
+        "haga",
         "hecho",
         "ícono",
         "ignoran",
         "imagen",
         "Implementado",
+        "implementar",
         "importar",
         "indicador",
         "iniciada",
         "inicial",
         "iniciar",
+        "Inicie",
         "inicio",
         "interesante",
         "interpolación",
@@ -185,6 +215,7 @@
         "Ocultar",
         "ocultará",
         "ocurre",
+        "opción",
         "Opciones",
         "Optimización",
         "oscuro",
@@ -215,6 +246,7 @@
         "proprción",
         "proveedor",
         "próximo",
+        "prueba",
         "pueda",
         "quita",
         "raíz",
@@ -226,6 +258,7 @@
         "recargar",
         "recuperar",
         "recuperará",
+        "redimenciona",
         "redimensionamiento",
         "redireccionará",
         "reducir",
@@ -235,6 +268,7 @@
         "renderizará",
         "representa",
         "Requerido",
+        "resaltado",
         "respectivamente",
         "resultado",
         "retraso",
@@ -242,10 +276,14 @@
         "ruta",
         "rutas",
         "salirse",
+        "sección",
         "según",
         "Segunda",
         "segundos",
+        "seleccionada",
+        "seleccionar",
         "será",
+        "servidor",
         "sesi'on",
         "sesión",
         "Signin",
@@ -266,6 +304,7 @@
         "tiempo",
         "tiene",
         "toca",
+        "todas",
         "transcurrido",
         "última",
         "último",
@@ -278,6 +317,8 @@
         "válidas",
         "valores",
         "varía",
-        "ventana"
+        "ventana",
+        "Verificar",
+        "Warzone"
     ]
 }
