--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,13 @@
         "admitidos",
         "afecte",
         "Agrega",
+        "Agregadas",
         "agregado",
         "Agregar",
         "ajustar",
         "alerta",
         "algún",
+        "algunas",
         "almacenado",
         "almacenamiento",
         "altura",
@@ -164,6 +166,7 @@
         "ícono",
         "ignoran",
         "imagen",
+        "Implementada",
         "Implementado",
         "implementar",
         "importar",
@@ -182,6 +185,7 @@
         "lista",
         "manejar",
         "maneje",
+        "manejo",
         "mantenga",
         "margen",
         "medio",
@@ -217,6 +221,7 @@
         "ocurre",
         "opción",
         "Opciones",
+        "Optimizaciñon",
         "Optimización",
         "oscuro",
         "otro",
@@ -314,6 +319,7 @@
         "Utiliza",
         "valida",
         "validación",
+        "validaciones",
         "válidas",
         "valores",
         "varía",
