--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "abajo",
+        "acción",
         "aceleración",
         "activa",
         "actualice",
@@ -9,18 +10,23 @@
         "adicional",
         "admite",
         "admitidos",
+        "adviewer",
         "afecte",
         "Agrega",
         "Agregadas",
         "agregado",
         "Agregar",
+        "agrego",
         "ajustar",
+        "aleatoria",
+        "aleatorios",
         "alerta",
         "algún",
         "algunas",
         "almacenado",
         "almacenamiento",
         "altura",
+        "añadir",
         "ancho",
         "animación",
         "animado",
@@ -54,6 +60,7 @@
         "cambie",
         "cambio",
         "cambios",
+        "Cantidad",
         "carga",
         "cargada",
         "cargado",
@@ -94,6 +101,8 @@
         "defecto",
         "definir",
         "dejé",
+        "Dependiendo",
+        "derecha",
         "derecho",
         "desbordamiento",
         "desde",
@@ -103,12 +112,15 @@
         "Desplaza",
         "desplazamiento",
         "Desplazar",
+        "desplazará",
+        "desplazarse",
         "después",
         "detener",
         "Determinar",
         "devuelve",
         "diferente",
         "diferently",
+        "dinámica",
         "dirección",
         "directamente",
         "diseño",
@@ -122,6 +134,7 @@
         "elemento",
         "elementos",
         "Elimina",
+        "eliminación",
         "Eliminar",
         "entonces",
         "entrada",
@@ -129,6 +142,8 @@
         "Escucha",
         "Escuchar",
         "específico",
+        "espectador",
+        "espectadores",
         "Espera",
         "está",
         "estaba",
@@ -139,6 +154,7 @@
         "evento",
         "eventos",
         "evitar",
+        "excederá",
         "existe",
         "Falta",
         "filtro",
@@ -151,6 +167,7 @@
         "Función",
         "funciones",
         "generales",
+        "generalmente",
         "generar",
         "grupar",
         "guardada",
@@ -166,11 +183,13 @@
         "ícono",
         "ignoran",
         "imagen",
+        "impar",
         "Implementada",
         "Implementado",
         "implementar",
         "importar",
         "indicador",
+        "índice",
         "iniciada",
         "inicial",
         "iniciar",
@@ -179,6 +198,7 @@
         "interesante",
         "interpolación",
         "izquierda",
+        "juego",
         "lado",
         "Limpia",
         "Limpiar",
@@ -198,6 +218,7 @@
         "Mensaje",
         "método",
         "mientras",
+        "milisegundos",
         "mitad",
         "Modificado",
         "mostrar",
@@ -208,11 +229,14 @@
         "navegación",
         "navegador",
         "necesidad",
+        "necesita",
         "nodo",
         "nombre",
         "nueva",
         "Nueva",
         "nuevo",
+        "Nunca",
+        "Nunva",
         "objetivo",
         "obtener",
         "obtenido",
@@ -253,12 +277,15 @@
         "próximo",
         "prueba",
         "pueda",
+        "quedan",
         "quita",
+        "quitar",
         "raíz",
         "rango",
         "rápida",
         "rastrear",
         "rastreo",
+        "reacción",
         "reanderizado",
         "recargar",
         "recuperar",
@@ -267,6 +294,7 @@
         "redimensionamiento",
         "redireccionará",
         "reducir",
+        "referencia",
         "registrada",
         "Registro",
         "renderización",
@@ -292,6 +320,7 @@
         "sesi'on",
         "sesión",
         "Signin",
+        "signo",
         "signos",
         "signup",
         "simplificar",
@@ -300,6 +329,7 @@
         "Solicitar",
         "suavizar",
         "supabase",
+        "sustituir",
         "tamaño",
         "tema",
         "temporizador",
@@ -311,13 +341,18 @@
         "toca",
         "todas",
         "transcurrido",
+        "ubicará",
         "última",
         "último",
+        "usada",
         "Usado",
         "usar",
         "usuario",
+        "usuarios",
         "Utiliza",
+        "Utilizar",
         "valida",
+        "válida",
         "validación",
         "validaciones",
         "válidas",
@@ -325,6 +360,7 @@
         "varía",
         "ventana",
         "Verificar",
-        "Warzone"
+        "Warzone",
+        "zona"
     ]
 }
