--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
     "cSpell.words": [
         "abajo",
+        "abierto",
+        "abra",
         "acción",
         "aceleración",
         "activa",
         "actualice",
         "actualiza",
         "Actualizar",
+        "adición",
         "adicional",
         "admite",
         "admitidos",
@@ -46,11 +49,15 @@
         "autocompletado",
         "automático",
         "auxiliar",
+        "avatares",
         "barra",
         "basado",
         "borra",
         "botón",
+        "botoón",
         "Btns",
+        "buscar",
+        "búsqueda",
         "cada",
         "calculada",
         "Calcular",
@@ -70,6 +77,7 @@
         "categoría",
         "categorías",
         "cerrar",
+        "cierre",
         "clase",
         "clic",
         "código",
@@ -78,26 +86,34 @@
         "columnas",
         "componente",
         "componentes",
+        "comprobar",
         "Comprueba",
+        "Configurar",
         "confirmación",
         "confirmar",
+        "contenedor",
+        "contenido",
         "contexto",
         "contrario",
         "controlador",
         "controladores",
         "correcciones",
+        "correctamente",
         "correcto",
         "correo",
         "corresponde",
         "correspondiente",
+        "correspondientes",
         "crear",
         "cuadro",
+        "cualquier",
         "cualquiera",
         "cuando",
         "cúbica",
         "darle",
         "datos",
         "debajo",
+        "Decrementar",
         "defecto",
         "definir",
         "dejé",
@@ -107,8 +123,12 @@
         "desbordamiento",
         "desde",
         "desees",
+        "desenfocarlo",
+        "desenfoque",
         "desmonta",
+        "desmontar",
         "desmonte",
+        "desplace",
         "Desplaza",
         "desplazamiento",
         "Desplazar",
@@ -128,6 +148,7 @@
         "duración",
         "ecuación",
         "efecto",
+        "Ejecutar",
         "ejecute",
         "Ejemplo",
         "elegir",
@@ -136,9 +157,12 @@
         "Elimina",
         "eliminación",
         "Eliminar",
+        "enfocarlo",
+        "enfoque",
         "entonces",
         "entrada",
         "errores",
+        "escriba",
         "Escucha",
         "Escuchar",
         "específico",
@@ -148,6 +172,7 @@
         "está",
         "estaba",
         "establece",
+        "establecer",
         "estado",
         "estático",
         "Estilos",
@@ -157,6 +182,9 @@
         "excederá",
         "existe",
         "Falta",
+        "filto",
+        "filtrado",
+        "filtrar",
         "filtro",
         "fondo",
         "formulario",
@@ -164,6 +192,7 @@
         "Fortnite",
         "Fragmentos",
         "fuente",
+        "fuera",
         "Función",
         "funciones",
         "generales",
@@ -180,6 +209,7 @@
         "hacia",
         "haga",
         "hecho",
+        "hola",
         "ícono",
         "ignoran",
         "imagen",
@@ -188,17 +218,21 @@
         "Implementado",
         "implementar",
         "importar",
+        "Incrementar",
         "indicador",
         "índice",
         "iniciada",
         "inicial",
+        "inicializa",
         "iniciar",
         "Inicie",
         "inicio",
         "interesante",
         "interpolación",
+        "intervalo",
         "izquierda",
         "juego",
+        "juegos",
         "lado",
         "Limpia",
         "Limpiar",
@@ -216,6 +250,7 @@
         "menos",
         "mensaje",
         "Mensaje",
+        "menú",
         "método",
         "mientras",
         "milisegundos",
@@ -232,6 +267,7 @@
         "necesita",
         "nodo",
         "nombre",
+        "nombres",
         "nueva",
         "Nueva",
         "nuevo",
@@ -259,6 +295,7 @@
         "Pasar",
         "pequeñas",
         "pequeño",
+        "perder",
         "permitir",
         "personalizado",
         "Personalizar",
@@ -266,6 +303,8 @@
         "posición",
         "predeterminado",
         "Preferiblemente",
+        "presionar",
+        "presione",
         "prevenir",
         "Prevenir",
         "previa",
@@ -297,6 +336,8 @@
         "referencia",
         "registrada",
         "Registro",
+        "regresarlo",
+        "renderiza",
         "renderización",
         "renderizará",
         "representa",
@@ -304,7 +345,9 @@
         "resaltado",
         "respectivamente",
         "resultado",
+        "resultados",
         "retraso",
+        "revisar",
         "rueda",
         "ruta",
         "rutas",
@@ -328,6 +371,11 @@
         "solicitar",
         "Solicitar",
         "suavizar",
+        "subscripción",
+        "subscrito",
+        "sugerencia",
+        "sugerencias",
+        "Sugerencias",
         "supabase",
         "sustituir",
         "tamaño",
@@ -340,6 +388,7 @@
         "tiene",
         "toca",
         "todas",
+        "todos",
         "transcurrido",
         "ubicará",
         "última",
@@ -351,6 +400,7 @@
         "usuarios",
         "Utiliza",
         "Utilizar",
+        "vacío",
         "valida",
         "válida",
         "validación",
@@ -360,6 +410,7 @@
         "varía",
         "ventana",
         "Verificar",
+        "volver",
         "Warzone",
         "zona"
     ]
