--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,7 @@
         "correcciones",
         "correctamente",
         "correcto",
+        "Corregido",
         "correo",
         "corresponde",
         "correspondiente",
@@ -213,6 +214,8 @@
         "ícono",
         "ignoran",
         "imagen",
+        "imágen",
+        "imágenes",
         "impar",
         "Implementada",
         "Implementado",
@@ -283,6 +286,7 @@
         "Opciones",
         "Optimizaciñon",
         "Optimización",
+        "Optimizadas",
         "oscuro",
         "otro",
         "página",
