--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -145,6 +145,7 @@
         "dirección",
         "directamente",
         "diseño",
+        "dispositivo",
         "distancia",
         "duración",
         "ecuación",
